criado a tabela e entities do users
